# waypoint

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: main.py
app/cogs/: animals.py  get_image.py  ping.py  session.py
app/core/: config.py
app/core/settings/: app.py  production.py  test.py
app/models/: discord.py  gta.py
app/repositories/: redis_session_repository.py  session_repository.py
app/services/: session_service.py
app/utils/: viewer.py
