[project]
name = "waypoint"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dishka>=1.8.0",
    "dishka-disnake>=0.1.4",
    "disnake>=2.11.0",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "pydantic-extra-types>=2.11.0",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
]
